Blog footer signature wrap line fix for microsoft edge

--- a/src/stylesheets/components/Footer/BlogFooter.module.sass
+++ b/src/stylesheets/components/Footer/BlogFooter.module.sass
@@ -14,6 +14,10 @@
     flex-flow: column-reverse
 
 .title
+  display: flex
+  flex-direction: column
+  span
+    margin-bottom: 5px
   +screen(small)
     padding-top: 15px
 
